[package]
name = "ferrumc-events"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
ctor = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }