[package]
name = "ferrumc-inventories"
version = "0.1.0"
edition = "2024"
build = "build/build.rs"

[dependencies]

ferrumc-net-codec = { workspace = true }
bevy_ecs = { workspace = true }
tokio = { workspace = true }
crossbeam-queue = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
ferrumc-registry = { workspace = true }
ferrumc-world = {workspace = true}
ferrumc-text = {workspace = true}
ferrumc-macros = {workspace = true}
log = {workspace = true}
ferrumc-nbt = {workspace = true}
ordered-float = "5.1.0"
regex = "1.12.2"

[build-dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = {workspace = true}

[lints]
workspace = true
