[package]
name = "ferrumc-net"
description = "Defines and implements all network related functionalities of FerrumC"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
ferrumc-net-encryption = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-config = { workspace = true }
ferrumc-ecs = { workspace = true }
ferrumc-events = { workspace = true }
ferrumc-nbt = { workspace = true }
ferrumc-core = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
socket2 = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
ctor = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
