[package]
name = "ferrumc-net"
description = "Defines and implements all network related functionalities of FerrumC"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
ferrumc-net-encryption = { workspace = true }
ferrumc-net-codec = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-config = { workspace = true }
ferrumc-commands = { workspace = true }
ferrumc-components = { workspace = true }
bevy_ecs = { workspace = true }

ferrumc-nbt = { workspace = true }
ferrumc-core = { workspace = true }
ferrumc-text = { workspace = true }
ferrumc-world = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
byteorder = { workspace = true }
ferrumc-state = { workspace = true }
crossbeam-channel = { workspace = true }
craftflow-nbt = { workspace = true }
typename = { workspace = true }
bitcode = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
yazi = { workspace = true }
ferrumc-inventories = { workspace = true }
base64 = { workspace = true }


[dev-dependencies]
criterion = { workspace = true }
ferrumc-world-gen = { workspace = true }

[[bench]]
name = "bench"
harness = false
