[package]
name = "ferrumc-pdc"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
bitcode = { workspace = true }
ahash = { workspace = true }
rayon = { workspace = true }
heed = { workspace = true }
tracing = { workspace = true }
bevy_ecs = { workspace = true }

ferrumc-general-purpose = { workspace = true }
