[package]
name = "ferrumc-performance"
description = "Stores all performance variables and calculates it."
edition.workspace = true
version.workspace = true

[dependencies]
ferrumc-config = { workspace = true }

bevy_ecs = { workspace = true }
sysinfo = { workspace = true }

[lints]
workspace = true
