[package]
name = "ferrumc-playerstate"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
ferrumc-storage = { workspace = true }
ferrumc-config = { workspace = true }
ferrumc-core = { workspace = true }
tracing = { workspace = true }
ferrumc-net-codec = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
macro_rules_attribute = { workspace = true }
bitcode_derive = { workspace = true }
bitcode = { workspace = true }
deepsize = { workspace = true }
ferrumc-nbt = { workspace = true }
ferrumc-macros = { workspace = true }
ferrumc-anvil = { workspace = true }
rayon = { workspace = true }
ferrumc-general-purpose = { workspace = true }
lazy_static = { workspace = true }
bzip2 = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
wyhash = { workspace = true }
moka = { workspace = true, features = ["sync"] }
ahash = { workspace = true }
rand = { workspace = true }
yazi = { workspace = true }
ferrumc-threadpool = { workspace = true }
lz4_flex = { workspace = true }

[lints]
workspace = true
